--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+      <title>Varun Jaladi</title>
+      <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+    </head>
+    <body>
+        <nav class="navbar navbar-default navbar-fixed-top">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="index.html">Varun Jaladi</a>
+            </div>
+
+            <div class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="index.html"> Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="templates/ElectionAnalysis.html"> Analysis Sample</a></li>
+                <li><a href="#"> Resume</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">About</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+    </body>
+</html>
+
