new version onepager

--- a/ElectionAnalysis.html
+++ b/ElectionAnalysis.html
@@ -204,6 +204,8 @@ div.tocify {
 
 </style>
 
+
+
 <!-- setup 3col/9col grid for toc_float and main content  -->
 <div class="row-fluid">
 <div class="col-xs-12 col-sm-4 col-md-3">
@@ -213,12 +215,20 @@ div.tocify {
 
 <div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
-
-
-
 <div class="fluid-row" id="header">
 
-
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="index.html#analysis"><<< Return to Main Site</a>
+    </div>
+</nav>
 
 <h1 class="title toc-ignore">2016 Presidential Election Analysis</h1>
 <h4 class="author"><em>Varun Jaladi</em></h4>
@@ -521,17 +531,31 @@ from USA_All_States</code></pre>
 ##  Max.   :23747013   Max.   :6135142          Max.   :90089  
 ## </code></pre>
 </div>
-<div id="tools" class="section level2">
+<div id="tools" class="section level2" style="padding-bottom:50px;">
 <h2>Tools</h2>
 <p>The following tools were used:</p>
 <ul>
 <li><p><b>Python</b> (to clean the dataset using the “Pandas” library)</p></li>
 <li><p><b>SQL</b> (to query census data and aggregate our state level data from a county level dataset)</p></li>
 <li><p><b>Tableau</b> (to create the visualizations used on this page)</p></li>
-<li><p><b>R</b> (to create interactive web visualizations using the “ggplot” and Shiny&quot; packages)</p></li>
+<li><p><b>R</b> (to create interactive web visualizations using “ggplot” and "Shiny", and the "Knitr" package to generate this page)</p></li>
 <li><p><b>data.world and Github</b> (to host and share the dataset)</p></li>
 </ul>
 </div>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="index.html#analysis"><<< Return to Main Site</a>
+    </div>
+</nav>
+
 </div>
 
 
