--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@
                         <a class="page-scroll" href="#analysis">Data Analysis Samples</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#resume">Resume</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#profiles">Online Profiles</a>
                     </li>
                 </ul>
@@ -77,7 +74,6 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Varun Jaladi</h1>
-                        <p class="intro-text">Access my analysis samples, resume, and online profiles here.</p>
                         <a href="#analysis" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -87,45 +83,25 @@
         </div>
     </header>
 
-    <!-- About Section -->
+    <!-- Analysis Section -->
     <section id="analysis" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Data Analysis Samples</h2>
                 <a href="ElectionAnalysis.html"><h3>2016 Election - Electorate Trends</h3></a>
                 <a href="#"><h3>NBA - Kevin Durant</h3></a>
-
             </div>
         </div>
     </section>
 
-    <!-- Download Section -->
-    <section id="resume" class="content-section text-center">
+    <!-- Profile Section -->
+    <section id="profiles" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Resume</h2>
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o"></i> PDF</a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-cloud"></i> Google Docs</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="profiles" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
                 <h2>Online Profiles</h2>
                 <p>You can find me at these locations to learn more, or contact me through email:</p>
-                <p><a href="mailto:vcjaladi@utexas.edu">vcjaladi@utexas.edu</a>
-                </p>
+                <p><a href="mailto:vcjaladi@utexas.edu">vcjaladi@utexas.edu</a></p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://data.world/vcjaladi" class="btn btn-default btn-lg"><i class="fa fa-bar-chart fa-fw"></i> <span class="network-name">Data.World</span></a>
@@ -134,15 +110,14 @@
                         <a href="https://github.com/vcjaladi" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin-square fa-fw"></i> <span class="network-name">LinkedIn</span></a>
+                        <a href="https://linkedin.com/in/varunjaladi" class="btn btn-default btn-lg"><i class="fa fa-linkedin-square fa-fw"></i> <span class="network-name">LinkedIn</span></a>
                     </li>
                 </ul>
+            </div>
             </div>
         </div>
     </section>
 
-    <!-- Map Section -->
-    <div id="map"></div>
 
     <!-- Footer -->
     <footer>
@@ -159,9 +134,6 @@
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHo-iiMM4AXxPpTnJL9eWrjlfWN_HNPNE&sensor=false"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/grayscale.min.js"></script>
