relabeled nba link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Data Analysis Samples</h2>
                 <a href="ElectionAnalysis.html"><h3>2016 Election - Electorate Trends</h3></a>
-                <a href="#"><h3>NBA - Kevin Durant</h3></a>
+                <a href="#"><h3>NBA - Kevin Durant [Coming Soon]</h3></a>
             </div>
         </div>
     </section>
